@@ -9,7 +9,7 @@ UPDATE `settings` set `siteTitle` = 'phpIPAM IP address management';
 UPDATE `settings` set `donate` = '0';
 ALTER TABLE `settings` ADD `enableVRF` tinyint(1) DEFAULT '1';			/* Add enableVRF to settings */
 ALTER TABLE `settings` ADD `IPfilter` varchar(128) DEFAULT NULL;		/* Add IPfilter to settings */
-UPDATE `settings` set `IPfilter` = 'description;dns_name;mac;owner;state;switch;port;note';
+UPDATE `settings` set `IPfilter` = 'dns_name;mac;owner;state;switch;port;note';
 
 /* ALTER subnets */
 ALTER TABLE `subnets` ADD `vrfId` int(3) DEFAULT NULL after `VLAN`;		/* Add vrf to subnets */
