@@ -4,7 +4,6 @@ features for next releases:
 	- Planned
 		- custom fields;
 		- translations (XML);
-		- Independant VLAN management;
 	
 	- Requests
 		- custom groups
